[#5] Added endpoint to search by approximate name
